--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -11,8 +11,31 @@
   booktitle={Proc. IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'25)},
   year={2025},
   category={conference},
+  selected={false},
   bibtex_show={true},
   abbr={IROS}
+}
+
+@inproceedings{cheng2025spear+,
+  title={{SPEAR+}: Streaming-Based Multi-Channel {SDR} Implementation Using the {RFSoC} Platform},
+  author={Cheng, Wei and Gao, Zhihui and Guajardo, Jose and Beshary, Hesham and Niknejad, Ali and Chen, Tingjun},
+  booktitle={Proc. IEEE Military Communications Conference (MILCOM'25)},
+  year={2025},
+  category={conference},
+  selected={false},
+  bibtex_show={true},
+  abbr={MILCOM}
+}
+
+@inproceedings{zheng2025zakotfs,
+  title={{Zak-OTFS} with Spread Pilot in Sub-6 {GHz}: Implementation and Over-the-Air Experimentation},
+  author={Zheng, Junyao and Khammammetti, Venkatesh and Dabak, Beyza and Rao Mattu, Sandesh and Chen, Tingjun and Calderbank, Robert},
+  booktitle={Proc. IEEE Military Communications Conference (MILCOM'25)},
+  year={2025},
+  category={conference},
+  selected={false},
+  bibtex_show={true},
+  abbr={MILCOM}
 }
 
 @article{Promponas2025on,
@@ -27,13 +50,13 @@
   abbr={TON}
 }
 
-@article{gao2025disaggregated,
+@article{vadlamani2025machine,
   title={Machine Intelligence on Wireless Edge Networks},
   author={Vadlamani, Sri Krishna and Sulimany, Kfir and Gao, Zhihui and Chen, Tingjun and Englund, Dirk},
   journal={arXiv preprint arXiv:2506.12210},
   year={2025},
   category={preprint},
-  selected={true},
+  selected={false},
   bibtex_show={true},
   abbr={arXiv}
 }
@@ -101,6 +124,7 @@
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'25) (invited)},
   year={2025},
   category={conference},
+  selected={true},
   bibtex_show={true},
   abbr={OFC}
 }
@@ -244,6 +268,7 @@
   year={2024},
   highlight={Postdeadline Paper},
   category={conference},
+  selected={true},
   bibtex_show={true},
   abbr={OFC}
 }
