--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -5,6 +5,28 @@
 
 # 2025
 
+@article{gao2025batstation,
+  title={BatStation: Toward In-Situ Radar Sensing on 5G Base Stations with Zero-Shot Template Generation},
+  author={Gao, Zhihui and Liu, Zhecun and Chen, Tingjun},
+  journal={arXiv preprint arXiv:2509.06898},
+  year={2025},
+  category={preprint},
+  selected={false},
+  bibtex_show={true},
+  abbr={arXiv}
+}
+
+@article{qi2025nexus,
+  title={NEXUS: Efficient and Scalable Multi-Cell mmWave Baseband Processing with Heterogeneous Compute},
+  author={Qi, Zhenzhou and Tung, Chung-Hsuan and Gao, Zhihui and Chen, Tingjun},
+  journal={arXiv preprint arXiv:2509.04625},
+  year={2025},
+  category={preprint},
+  selected={false},
+  bibtex_show={true},
+  abbr={arXiv}
+}
+
 @inproceedings{hunt2025ragnnarok,
   title={RaGNNarok: A Light-Weight Graph Neural Network for Enhancing Radar Point Clouds on Unmanned Ground},
   author={Hunt, David and Luo, Shaocheng and Hallyburton, Robert and Li, Yi and Nillongo, Shafii and Chen, Tingjun and Pajic, Miroslav},
