--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -5,6 +5,16 @@
 
 # 2025
 
+@inproceedings{yang2025iot,
+  title={{IoT-MCP}: Bridging LLMs and IoT Systems Through Model Context Protocol},
+  author={Yang, Ningyuan and Lyu, Guanliang and Ma, Mingchen and Lu, Yiyi and Li, Yiming and Gao, Zhihui and Ye, Hancheng and Zhang, Jianyi and Chen, Tingjun and Chen, Yiran},
+  booktitle={Proc. ACM Workshop on Wireless Network Testbeds, Experimental evaluation \& CHaracterization (WiNTECH'25)},
+  year={2025},
+  category={workshop},
+  bibtex_show={true},
+  abbr={WiNTECH}
+}
+
 @article{gao2025batstation,
   title={BatStation: Toward In-Situ Radar Sensing on 5G Base Stations with Zero-Shot Template Generation},
   author={Gao, Zhihui and Liu, Zhecun and Chen, Tingjun},
