--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -3,7 +3,34 @@
 
 @string{aps = {American Physical Society,}}
 
+# 2026
+
+@inproceedings{wang2026scalable,
+  title={Scalable ML Models and Cascaded Learning for Efficient Multi-Span OSNR and GSNR Prediction},
+  author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
+  journal={Journal of Optical Communications and Networking},
+  year={2025},
+  publisher={IEEE},
+  highlight={Invited Paper to the JOCN Special Issue on Invited/Top-Rated Papers from IEEE/Optica OFC'25},
+  category={journal},
+  selected={false},
+  bibtex_show={true},
+  abbr={JOCN}
+}
+
 # 2025
+
+@article{sasai2025optical,
+  title={Optical Link Tomography: First Field Trial and 4D Extension},
+  author={Sasai, Takeo and Borraccini, Giacomo and Huang, Yue-Kai and Nishizawa, Hideki and Wang, Zehao and Chen, Tingjun and Sone, Yoshiaki and Takahashi, Minami and Matsumura, Tatsuya and Nakamura, Masanori and others},
+  journal={Journal of Lightwave Technology},
+  year={2025},
+  publisher={IEEE/ACM},
+  category={journal},
+  selected={false},
+  bibtex_show={true},
+  abbr={JLT}
+}
 
 @inproceedings{yang2025iot,
   title={{IoT-MCP}: Bridging LLMs and IoT Systems Through Model Context Protocol},
