--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -5,7 +5,7 @@
 
 # 2026
 
-@inproceedings{wang2026scalable,
+@article{wang2026scalable,
   title={Scalable ML Models and Cascaded Learning for Efficient Multi-Span OSNR and GSNR Prediction},
   author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
   journal={Journal of Optical Communications and Networking},
@@ -18,7 +18,38 @@
   abbr={JOCN}
 }
 
+@inproceedings{eppink2026extending,
+  title={Extending Permeable Fracture Imaging at Newberry to Depth: Added Receiver-Coverage Area and Seismic Velocity Control},
+  author={Eppink, Jeffery and Malin, Peter and Mathews, Austin and Ontiveros, Hector and Stroujkova, Anastasia and Valenzuela, Sergio and Fleure, Tom and McLain, William and Paschall, Steve and Sicking, Charles and Bonneville, Alain and Chen, Tingjun and Wang, Zehao},
+  article={51st Stanford Geothermal Workshop},
+  year={2026},
+  category={workshop},
+  bibtex_show={true},
+  abbr={}
+}
+
 # 2025
+
+@inproceedings{gao2025wise,
+  title={{WISE}: Wireless Analog Computing at Radio Frequency for Disaggregated Deep Learning Inference},
+  author={Gao, Zhihui and Vadlamani, Sri Krishna and Sulimany, Kfir and Englund, Dirk and Chen, Tingjun},
+  booktitle={NeurIPS Workshop on AI and ML for Next-Generation Wireless Communications and Networking (AI4NextG'25)},
+  year={2025},
+  category={workshop},
+  bibtex_show={true},
+  abbr={AI4NextG}
+}
+
+@article{qi2025decodex,
+  title={{DecodeX}: Exploring and Benchmarking of LDPC Decoding across CPU, GPU, and ASIC Platforms},
+  author={Qi, Zhenzhou and Yao, Yuncheng and Li, Yiming and Tung, Chung-Hsuan and Zheng, Junyao and Zhuo, Danyang and Chen, Tingjun},
+  journal={arXiv preprint arXiv:2511.02952},
+  year={2025},
+  category={preprint},
+  selected={false},
+  bibtex_show={true},
+  abbr={arXiv}
+}
 
 @article{sasai2025optical,
   title={Optical Link Tomography: First Field Trial and 4D Extension},
