updated pub item

--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -21,11 +21,11 @@
 @inproceedings{eppink2026extending,
   title={Extending Permeable Fracture Imaging at Newberry to Depth: Added Receiver-Coverage Area and Seismic Velocity Control},
   author={Eppink, Jeffery and Malin, Peter and Mathews, Austin and Ontiveros, Hector and Stroujkova, Anastasia and Valenzuela, Sergio and Fleure, Tom and McLain, William and Paschall, Steve and Sicking, Charles and Bonneville, Alain and Chen, Tingjun and Wang, Zehao},
-  article={51st Stanford Geothermal Workshop},
+  booktitle={51st Stanford Geothermal Workshop},
   year={2026},
   category={workshop},
   bibtex_show={true},
-  abbr={}
+  abbr={SGW}
 }
 
 # 2025
