--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -8,7 +8,7 @@
 @article{wang2026scalable,
   title={Scalable ML Models and Cascaded Learning for Efficient Multi-Span OSNR and GSNR Prediction},
   author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
-  journal={Journal of Optical Communications and Networking},
+  journal={IEEE/Optica Journal of Optical Communications and Networking},
   year={2026},
   publisher={IEEE},
   highlight={Invited Paper to the JOCN Special Issue on Invited/Top-Rated Papers from IEEE/Optica OFC'25},
@@ -54,9 +54,9 @@
 @article{sasai2025optical,
   title={Optical Link Tomography: First Field Trial and 4D Extension},
   author={Sasai, Takeo and Borraccini, Giacomo and Huang, Yue-Kai and Nishizawa, Hideki and Wang, Zehao and Chen, Tingjun and Sone, Yoshiaki and Takahashi, Minami and Matsumura, Tatsuya and Nakamura, Masanori and others},
-  journal={Journal of Lightwave Technology},
+  journal={IEEE/Optica Journal of Lightwave Technology},
   year={2025},
-  publisher={IEEE/ACM},
+  publisher={IEEE},
   category={journal},
   selected={false},
   bibtex_show={true},
@@ -232,7 +232,7 @@
 @article{wang2025multi,
   title={Multi-Span Optical Power Spectrum Prediction Using Cascaded Learning with One-Shot End-to-End Measurement},
   author={Wang, Zehao and Huang, Yue-Kai and Han, Shaobo and Kilper, Daniel and Chen, Tingjun},
-  journal={Journal of Optical Communications and Networking},
+  journal={IEEE/Optica Journal of Optical Communications and Networking},
   volume={17},
   number={1},
   pages={A23--A33},
@@ -564,7 +564,7 @@
 @article{wang2023open,
   title={Open {EDFA} Gain Spectrum Dataset and Its Applications in Data-driven {EDFA} Gain Modeling},
   author={Wang, Zehao and Kilper, Daniel C and Chen, Tingjun},
-  journal={Journal of Optical Communications and Networking},
+  journal={IEEE/Optica Journal of Optical Communications and Networking},
   volume={15},
   number={9},
   pages={588--599},
