--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -5,6 +5,30 @@
 
 # 2026
 
+@inproceedings{qi2026nexus,
+  title={Nexus: Efficient and Scalable Multi-Cell mmWave Baseband Processing with Heterogeneous Compute},
+  author={Qi, Zhenzhou and Tung, Chung-Hsuan and Gao, Zhihui and Chen, Tingjun},
+  booktitle={Proc. ACM International Conference on Mobile Computing and Networking (MobiCom'26)},
+  year={2026},
+  category={conference},
+  selected={true},
+  bibtex_show={true},
+  abbr={MobiCom},
+  code={https://github.com/functions-lab/Savannah}
+}
+
+@article{gao2026disaggregated,
+  title={Disaggregated Machine Learning via In-Physics Computing at Radio Frequency},
+  author={Gao, Zhihui and Vadlamani, Sri Krishna and Sulimany, Kfir and Englund, Dirk and Chen, Tingjun},
+  journal={Science Advances},
+  year={2026},
+  publisher={American Association for the Advancement of Science},
+  category={journal},
+  selected={true},
+  bibtex_show={true},
+  abbr={Sci. Adv.}
+}
+
 @article{wang2026scalable,
   title={Scalable ML Models and Cascaded Learning for Efficient Multi-Span OSNR and GSNR Prediction},
   author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
@@ -13,9 +37,34 @@
   publisher={IEEE},
   highlight={Invited Paper to the JOCN Special Issue on Invited/Top-Rated Papers from IEEE/Optica OFC'25},
   category={journal},
-  selected={false},
+  selected={true},
   bibtex_show={true},
   abbr={JOCN}
+}
+
+@article{sasai2025optical,
+  title={Optical Link Tomography: First Field Trial and 4D Extension},
+  author={Sasai, Takeo and Borraccini, Giacomo and Huang, Yue-Kai and Nishizawa, Hideki and Wang, Zehao and Chen, Tingjun and Sone, Yoshiaki and Takahashi, Minami and Matsumura, Tatsuya and Nakamura, Masanori and others},
+  journal={IEEE/Optica Journal of Lightwave Technology},
+  year={2025},
+  publisher={IEEE},
+  highlight={Invited Paper to the JLT Special Issue on Postdeadline Papers from IEEE/Optica OFC'24},
+  category={journal},
+  bibtex_show={true},
+  abbr={JLT},
+  doi={10.1109/JLT.2025.3620127}
+  selected={true}
+}
+
+@article{Promponas2025on,
+  title={On the Optimization and Stability of Sectorized Wireless Networks},
+  author={Promponas, Panagiotis and Chen, Tingjun and Tassiulas, Leandros},
+  journal={IEEE/ACM Transactions on Networking (to appear)},
+  year={2025},
+  publisher={IEEE/ACM},
+  category={journal},
+  bibtex_show={true},
+  abbr={TON}
 }
 
 @inproceedings{eppink2026extending,
@@ -46,21 +95,8 @@
   journal={arXiv preprint arXiv:2511.02952},
   year={2025},
   category={preprint},
-  selected={false},
   bibtex_show={true},
   abbr={arXiv}
-}
-
-@article{sasai2025optical,
-  title={Optical Link Tomography: First Field Trial and 4D Extension},
-  author={Sasai, Takeo and Borraccini, Giacomo and Huang, Yue-Kai and Nishizawa, Hideki and Wang, Zehao and Chen, Tingjun and Sone, Yoshiaki and Takahashi, Minami and Matsumura, Tatsuya and Nakamura, Masanori and others},
-  journal={IEEE/Optica Journal of Lightwave Technology},
-  year={2025},
-  publisher={IEEE},
-  category={journal},
-  selected={false},
-  bibtex_show={true},
-  abbr={JLT}
 }
 
 @inproceedings{yang2025iot,
@@ -73,13 +109,22 @@
   abbr={WiNTECH}
 }
 
+@inproceedings{hunt2025ragnnarok,
+  title={RaGNNarok: A Light-Weight Graph Neural Network for Enhancing Radar Point Clouds on Unmanned Ground Vehicles},
+  author={Hunt, David and Luo, Shaocheng and Hallyburton, Robert and Li, Yi and Nillongo, Shafii and Chen, Tingjun and Pajic, Miroslav},
+  booktitle={Proc. IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'25)},
+  year={2025},
+  category={conference},
+  bibtex_show={true},
+  abbr={IROS}
+}
+
 @article{gao2025batstation,
   title={BatStation: Toward In-Situ Radar Sensing on 5G Base Stations with Zero-Shot Template Generation},
   author={Gao, Zhihui and Liu, Zhecun and Chen, Tingjun},
   journal={arXiv preprint arXiv:2509.06898},
   year={2025},
   category={preprint},
-  selected={false},
   bibtex_show={true},
   abbr={arXiv}
 }
@@ -95,24 +140,12 @@
   abbr={arXiv}
 }
 
-@inproceedings{hunt2025ragnnarok,
-  title={RaGNNarok: A Light-Weight Graph Neural Network for Enhancing Radar Point Clouds on Unmanned Ground},
-  author={Hunt, David and Luo, Shaocheng and Hallyburton, Robert and Li, Yi and Nillongo, Shafii and Chen, Tingjun and Pajic, Miroslav},
-  booktitle={Proc. IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'25)},
-  year={2025},
-  category={conference},
-  selected={false},
-  bibtex_show={true},
-  abbr={IROS}
-}
-
 @inproceedings{cheng2025spear+,
   title={{SPEAR+}: Streaming-Based Multi-Channel {SDR} Implementation Using the {RFSoC} Platform},
   author={Cheng, Wei and Gao, Zhihui and Guajardo, Jose and Beshary, Hesham and Niknejad, Ali and Chen, Tingjun},
   booktitle={Proc. IEEE Military Communications Conference (MILCOM'25)},
   year={2025},
   category={conference},
-  selected={false},
   bibtex_show={true},
   abbr={MILCOM}
 }
@@ -123,21 +156,8 @@
   booktitle={Proc. IEEE Military Communications Conference (MILCOM'25)},
   year={2025},
   category={conference},
-  selected={false},
   bibtex_show={true},
   abbr={MILCOM}
-}
-
-@article{Promponas2025on,
-  title={On the Optimization and Stability of Sectorized Wireless Networks},
-  author={Promponas, Panagiotis and Chen, Tingjun and Tassiulas, Leandros},
-  journal={IEEE/ACM Transactions on Networking (to appear)},
-  year={2025},
-  publisher={IEEE/ACM},
-  category={journal},
-  selected={false},
-  bibtex_show={true},
-  abbr={TON}
 }
 
 @article{vadlamani2025machine,
@@ -146,7 +166,6 @@
   journal={arXiv preprint arXiv:2506.12210},
   year={2025},
   category={preprint},
-  selected={false},
   bibtex_show={true},
   abbr={arXiv}
 }
@@ -157,18 +176,6 @@
   journal={arXiv preprint arXiv:2505.01616},
   year={2025},
   category={preprint},
-  selected={false},
-  bibtex_show={true},
-  abbr={arXiv}
-}
-
-@article{gao2025disaggregated,
-  title={Disaggregated Deep Learning via In-Physics Computing at Radio Frequency},
-  author={Gao, Zhihui and Vadlamani, Sri Krishna and Sulimany, Kfir and Englund, Dirk and Chen, Tingjun},
-  journal={arXiv preprint arXiv:2504.17752},
-  year={2025},
-  category={preprint},
-  selected={true},
   bibtex_show={true},
   abbr={arXiv}
 }
@@ -208,13 +215,22 @@
   abbr={ONDM}
 }
 
+@article{gao2025disaggregated,
+  title={Disaggregated Deep Learning via In-Physics Computing at Radio Frequency},
+  author={Gao, Zhihui and Vadlamani, Sri Krishna and Sulimany, Kfir and Englund, Dirk and Chen, Tingjun},
+  journal={arXiv preprint arXiv:2504.17752},
+  year={2025},
+  category={preprint},
+  bibtex_show={true},
+  abbr={arXiv}
+}
+
 @inproceedings{wang2025scalable,
   title={Scalable Machine Learning Models for Optical Transmission System Management},
   author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'25) (invited)},
   year={2025},
   category={conference},
-  selected={true},
   bibtex_show={true},
   abbr={OFC}
 }
@@ -358,7 +374,6 @@
   year={2024},
   highlight={Postdeadline Paper},
   category={conference},
-  selected={true},
   bibtex_show={true},
   abbr={OFC}
 }
