--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -50,10 +50,10 @@
   publisher={IEEE},
   highlight={Invited Paper to the JLT Special Issue on Postdeadline Papers from IEEE/Optica OFC'24},
   category={journal},
+  selected={true},
   bibtex_show={true},
   abbr={JLT},
   doi={10.1109/JLT.2025.3620127}
-  selected={true}
 }
 
 @article{Promponas2025on,
