--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -42,25 +42,11 @@
   abbr={JOCN}
 }
 
-@article{sasai2025optical,
-  title={Optical Link Tomography: First Field Trial and 4D Extension},
-  author={Sasai, Takeo and Borraccini, Giacomo and Huang, Yue-Kai and Nishizawa, Hideki and Wang, Zehao and Chen, Tingjun and Sone, Yoshiaki and Takahashi, Minami and Matsumura, Tatsuya and Nakamura, Masanori and others},
-  journal={IEEE/Optica Journal of Lightwave Technology},
-  year={2025},
-  publisher={IEEE},
-  highlight={Invited Paper to the JLT Special Issue on Postdeadline Papers from IEEE/Optica OFC'24},
-  category={journal},
-  selected={true},
-  bibtex_show={true},
-  abbr={JLT},
-  doi={10.1109/JLT.2025.3620127}
-}
-
 @article{Promponas2025on,
   title={On the Optimization and Stability of Sectorized Wireless Networks},
   author={Promponas, Panagiotis and Chen, Tingjun and Tassiulas, Leandros},
   journal={IEEE/ACM Transactions on Networking (to appear)},
-  year={2025},
+  year={2026},
   publisher={IEEE/ACM},
   category={journal},
   bibtex_show={true},
@@ -78,6 +64,22 @@
 }
 
 # 2025
+@article{sasai2025optical,
+  title={Optical Link Tomography: First Field Trial and 4D Extension},
+  author={Sasai, Takeo and Borraccini, Giacomo and Huang, Yue-Kai and Nishizawa, Hideki and Wang, Zehao and Chen, Tingjun and Sone, Yoshiaki and Takahashi, Minami and Matsumura, Tatsuya and Nakamura, Masanori and others},
+  journal={IEEE/Optica Journal of Lightwave Technology},
+  volume={43},
+  number={24},
+  pages={10776--10787},
+  year={2025},
+  publisher={IEEE},
+  highlight={Invited Paper to the JLT Special Issue on Postdeadline Papers from IEEE/Optica OFC'24},
+  category={journal},
+  selected={true},
+  bibtex_show={true},
+  abbr={JLT},
+  doi={10.1109/JLT.2025.3620127}
+}
 
 @inproceedings{gao2025wise,
   title={{WISE}: Wireless Analog Computing at Radio Frequency for Disaggregated Deep Learning Inference},
