added paper topics

--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -10,11 +10,26 @@
   author={Qi, Zhenzhou and Tung, Chung-Hsuan and Gao, Zhihui and Chen, Tingjun},
   booktitle={Proc. ACM International Conference on Mobile Computing and Networking (MobiCom'26)},
   year={2026},
+  code={https://github.com/functions-lab/Savannah},
   category={conference},
   selected={true},
   bibtex_show={true},
   abbr={MobiCom},
-  code={https://github.com/functions-lab/Savannah}
+  topic_primary={Wireless},
+  topic_secondary={Systems}
+}
+
+@inproceedings{qin2026gpusynth,
+  title={{Phantora}: Maximizing Code Reuse in Simulation-based Machine Learning System Performance Estimation},
+  author={Qin, Jianxing and Chen, Jingrong and Kong, Xinhao and Wu, Yongji and Yuan, Tianjun and Luo, Liang and Wang, Zhaodong and Zhang, Ying and Chen, Tingjun and Lebeck, Alvin R. and Zhuo, Danyang},
+  booktitle={Proc. USENIX Symposium on Networked Systems Design and Implementation (NSDI'26)},
+  year={2026},
+  category={conference},
+  selected={false},
+  bibtex_show={true},
+  abbr={NSDI},
+  topic_primary={AI/ML},
+  topic_secondary={Systems}
 }
 
 @article{gao2026disaggregated,
@@ -26,7 +41,9 @@
   category={journal},
   selected={true},
   bibtex_show={true},
-  abbr={Sci. Adv.}
+  abbr={Sci. Adv.},
+  topic_primary={AI/ML},
+  topic_secondary={Wireless}
 }
 
 @article{wang2026scalable,
@@ -39,7 +56,9 @@
   category={journal},
   selected={true},
   bibtex_show={true},
-  abbr={JOCN}
+  abbr={JOCN},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @article{Promponas2025on,
@@ -50,7 +69,8 @@
   publisher={IEEE/ACM},
   category={journal},
   bibtex_show={true},
-  abbr={TON}
+  abbr={TON},
+  topic_primary={Wireless}
 }
 
 @inproceedings{eppink2026extending,
@@ -60,7 +80,8 @@
   year={2026},
   category={workshop},
   bibtex_show={true},
-  abbr={SGW}
+  abbr={SGW},
+  topic_primary={Optics}
 }
 
 # 2025
@@ -73,12 +94,13 @@
   pages={10776--10787},
   year={2025},
   publisher={IEEE},
+  doi={10.1109/JLT.2025.3620127},
   highlight={Invited Paper to the JLT Special Issue on Postdeadline Papers from IEEE/Optica OFC'24},
   category={journal},
   selected={true},
   bibtex_show={true},
   abbr={JLT},
-  doi={10.1109/JLT.2025.3620127}
+  topic_primary={Optics}
 }
 
 @inproceedings{gao2025wise,
@@ -88,7 +110,9 @@
   year={2025},
   category={workshop},
   bibtex_show={true},
-  abbr={AI4NextG}
+  abbr={AI4NextG},
+  topic_primary={AI/ML},
+  topic_secondary={Wireless}
 }
 
 @article{qi2025decodex,
@@ -98,7 +122,9 @@
   year={2025},
   category={preprint},
   bibtex_show={true},
-  abbr={arXiv}
+  abbr={arXiv},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{yang2025iot,
@@ -108,7 +134,9 @@
   year={2025},
   category={workshop},
   bibtex_show={true},
-  abbr={WiNTECH}
+  abbr={WiNTECH},
+  topic_primary={AI/ML},
+  topic_secondary={Systems}
 }
 
 @inproceedings{hunt2025ragnnarok,
@@ -118,7 +146,9 @@
   year={2025},
   category={conference},
   bibtex_show={true},
-  abbr={IROS}
+  abbr={IROS},
+  topic_primary={Wireless},
+  topic_secondary={AI/ML}
 }
 
 @article{gao2025batstation,
@@ -128,7 +158,9 @@
   year={2025},
   category={preprint},
   bibtex_show={true},
-  abbr={arXiv}
+  abbr={arXiv},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{qi2025nexus,
@@ -139,7 +171,9 @@
   category={preprint},
   selected={false},
   bibtex_show={true},
-  abbr={arXiv}
+  abbr={arXiv},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{cheng2025spear+,
@@ -149,7 +183,9 @@
   year={2025},
   category={conference},
   bibtex_show={true},
-  abbr={MILCOM}
+  abbr={MILCOM},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{zheng2025zakotfs,
@@ -159,7 +195,8 @@
   year={2025},
   category={conference},
   bibtex_show={true},
-  abbr={MILCOM}
+  abbr={MILCOM},
+  topic_primary={Wireless}
 }
 
 @article{vadlamani2025machine,
@@ -169,17 +206,21 @@
   year={2025},
   category={preprint},
   bibtex_show={true},
-  abbr={arXiv}
+  abbr={arXiv},
+  topic_primary={AI/ML},
+  topic_secondary={Wireless}
 }
 
 @article{qin2025phantora,
   title={Phantora: Live GPU Cluster Simulation for Machine Learning System Performance Estimation},
-  author={Qin, Jianxing and Chen, Jingrong and Kong, Xinhao and Wu, Yongji and Luo, Liang and Wang, Zhaodong and Zhang, Ying and Chen, Tingjun and Lebeck, Alvin R and Zhuo, Danyang},
+  author={Qin, Jianxing and Chen, Jingrong and Kong, Xinhao and Wu, Yongji and Luo, Liang and Wang, Zhaodong and Zhang, Ying and Chen, Tingjun and Lebeck, Alvin R. and Zhuo, Danyang},
   journal={arXiv preprint arXiv:2505.01616},
   year={2025},
   category={preprint},
   bibtex_show={true},
-  abbr={arXiv}
+  abbr={arXiv},
+  topic_primary={AI/ML},
+  topic_secondary={Systems}
 }
 
 @article{kohli2025design,
@@ -193,7 +234,8 @@
   publisher={IEEE},
   category={journal},
   bibtex_show={true},
-  abbr={TWC}
+  abbr={TWC},
+  topic_primary={Wireless}
 }
 
 @inproceedings{li2025generalized,
@@ -201,10 +243,12 @@
   author={Li, Yiming and Gao, Zhihui and Palathinkal, Joshua and Ghosh, Monisha and Chen, Tingjun},
   booktitle={Proc. IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN'25)},
   year={2025},
+  code={https://github.com/functions-lab/geo2sigmap},
   category={conference},
   bibtex_show={true},
   abbr={DySPAN},
-  code={https://github.com/functions-lab/geo2sigmap}
+  topic_primary={Wireless},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{xie2025wdm,
@@ -214,7 +258,9 @@
   year={2025},
   category={conference},
   bibtex_show={true},
-  abbr={ONDM}
+  abbr={ONDM},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @article{gao2025disaggregated,
@@ -224,7 +270,9 @@
   year={2025},
   category={preprint},
   bibtex_show={true},
-  abbr={arXiv}
+  abbr={arXiv},
+  topic_primary={AI/ML},
+  topic_secondary={Wireless}
 }
 
 @inproceedings{wang2025scalable,
@@ -234,7 +282,9 @@
   year={2025},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{wang2025multi,
@@ -244,7 +294,9 @@
   year={2025},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @article{wang2025multi,
@@ -256,13 +308,15 @@
   pages={A23--A33},
   year={2025},
   publisher={IEEE},
+  doi={10.1364/JOCN.533634},
+  code={https://github.com/functions-lab/COSMOS-EDFA-Dataset},
   highlight={Invited Paper to the JOCN Special Issue on Top-Scored Papers from IEEE/Optica OFC'24},
   category={journal},
   selected={true},
   bibtex_show={true},
   abbr={JOCN},
-  doi={10.1364/JOCN.533634},
-  code={https://github.com/functions-lab/COSMOS-EDFA-Dataset}
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 # 2024
@@ -271,12 +325,14 @@
   author={Qi, Zhenzhou and Tung, Chung-Hsuan and Kalia, Anuj and Chen, Tingjun},
   booktitle={Proc. ACM International Conference on Mobile Computing and Networking (MobiCom'24)},
   year={2024},
+  doi={10.1145/3636534.3690707},
+  code={https://github.com/functions-lab/Savannah},
   category={conference},
   selected={true},
   bibtex_show={true},
   abbr={MobiCom},
-  doi={10.1145/3636534.3690707},
-  code={https://github.com/functions-lab/Savannah}
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{gao2024mambas,
@@ -284,12 +340,14 @@
   author={Gao, Zhihui and Qi, Zhenzhou and Chen, Tingjun},
   booktitle={Proc. ACM International Conference on Mobile Computing and Networking (MobiCom'24)},
   year={2024},
+  doi={10.1145/3636534.3649390},
+  code={https://github.com/functions-lab/MAMBAS-MobiCom2024},
   category={conference},
   selected={true},
   bibtex_show={true},
   abbr={MobiCom},
-  doi={10.1145/3636534.3649390},
-  code={https://github.com/functions-lab/MAMBAS-MobiCom2024}
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{cheng2024spear,
@@ -297,11 +355,13 @@
   author={Cheng, Wei and Gao, Zhihui and Chen, Tingjun},
   booktitle={Proc. ACM Workshop on Wireless Network Testbeds, Experimental evaluation \& CHaracterization (WiNTECH'24)},
   year={2024},
+  doi={10.1145/3636534.3697310},
+  code={https://github.com/functions-lab/SPEAR},
   category={workshop},
   bibtex_show={true},
   abbr={WiNTECH},
-  doi={10.1145/3636534.3697310},
-  code={https://github.com/functions-lab/SPEAR}
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{gao2024deepmon,
@@ -309,10 +369,12 @@
   author={Gao, Zhihui and Zhang, Yunjia and Chen, Tingjun},
   booktitle={Proc. ACM Workshop on Machine Learning for NextG Networks (MLNextG'24)},
   year={2024},
+  doi={10.1145/3636534.3698250},
   category={workshop},
   bibtex_show={true},
   abbr={MLNextG},
-  doi={10.1145/3636534.3698250}
+  topic_primary={Wireless},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{raj2024interference,
@@ -322,7 +384,9 @@
   year={2024},
   category={conference},
   bibtex_show={true},
-  abbr={ECOC}
+  abbr={ECOC},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{raj2024multi,
@@ -332,7 +396,9 @@
   year={2024},
   category={conference},
   bibtex_show={true},
-  abbr={ECOC}
+  abbr={ECOC},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{sun2024sok1,
@@ -340,10 +406,11 @@
   author={Sun, Wei and Chen, Tingjun and Gong, Neil},
   booktitle={Proc. Privacy Enhancing Technologies Symposium (PETS'24)},
   year={2024},
+  doi={10.56553/popets-2024-0052},
   category={conference},
   bibtex_show={true},
   abbr={PETS},
-  doi={10.56553/popets-2024-0052}
+  topic_primary={Wireless}
 }
 
 @inproceedings{li2024geo2sigmap,
@@ -351,12 +418,14 @@
   author={Li, Yiming and Li, Zeyu and Gao, Zhihui and Chen, Tingjun},
   booktitle={Proc. IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN'24)},
   year={2024},
+  doi={10.1109/DySPAN60163.2024.10632773},
+  code={https://github.com/functions-lab/geo2sigmap},
   category={conference},
   selected={true},
   bibtex_show={true},
   abbr={DySPAN},
-  doi={10.1109/DySPAN60163.2024.10632773},
-  code={https://github.com/functions-lab/geo2sigmap}
+  topic_primary={Wireless},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{hunt2024radcloud,
@@ -366,7 +435,9 @@
   year={2024},
   category={conference},
   bibtex_show={true},
-  abbr={ICRA}
+  abbr={ICRA},
+  topic_primary={Wireless},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{sasai20244d,
@@ -377,7 +448,8 @@
   highlight={Postdeadline Paper},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics}
 }
 
 @inproceedings{wang2024multi,
@@ -388,7 +460,9 @@
   highlight={Top-Scored Paper, Corning Outstanding Student Paper Competition Finalist},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{mano2024modeling,
@@ -398,7 +472,8 @@
   year={2024},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics}
 }
 
 @inproceedings{ip2024inline,
@@ -408,18 +483,20 @@
   year={2024},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics}
 }
 
 @inproceedings{hunt2024madradar,
   title={{MadRadar}: A Black-Box Physical Layer Attack Framework on {mmWave} Automotive {FMCW} Radars},
   author={Hunt, David and Angell, Kristen and Qi, Zhenzhou and Chen, Tingjun and Pajic, Miroslav},
   booktitle={Proc. ISOC Network and Distributed System Security Symposium (NDSS’24)},
+  doi={10.14722/ndss.2024.24135},
   year={2024},
   category={conference},
   bibtex_show={true},
   abbr={NDSS},
-  doi={10.14722/ndss.2024.24135}
+  topic_primary={Wireless}
 }
 
 @article{garikapati2024full,
@@ -433,7 +510,8 @@
   publisher={IEEE},
   category={journal},
   bibtex_show={true},
-  abbr={JSSC}
+  abbr={JSSC},
+  topic_primary={Wireless}
 }
 
 @article{wang2024field,
@@ -445,12 +523,13 @@
   pages={1304--1311},
   year={2024},
   publisher={IEEE/Optica},
+  doi={10.1109/JLT.2023.3319166},
   highlight={Invited Paper to the JLT Special Issue on Top-Scored Papers from IEEE/Optica OFC'23},
   category={journal},
   selected={true},
   bibtex_show={true},
   abbr={JLT},
-  doi={10.1109/JLT.2023.3319166}
+  topic_primary={Optics}
 }
 
 @article{sun2024sok2,
@@ -460,10 +539,11 @@
   number={2},
   pages={313--329},
   year={2024},
+  doi={10.56553/popets-2024-0052},
   bibtex_show={true},
   category={journal},
   abbr={PETS},
-  doi={10.56553/popets-2024-0052}
+  topic_primary={Wireless}
 }
 
 @article{nishizawa2024fast,
@@ -475,10 +555,11 @@
   pages={233--242},
   year={2024},
   publisher={IEEE/Optica},
+  doi={10.1364/JOCN.505729},
   category={journal},
   bibtex_show={true},
   abbr={JOCN},
-  doi={10.1364/JOCN.505729}
+  topic_primary={Optics}
 }
 
 
@@ -490,7 +571,9 @@
   year={2023},
   category={conference},
   bibtex_show={true},
-  abbr={MobiHoc}
+  abbr={MobiHoc},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 
@@ -501,7 +584,8 @@
   year={2023},
   category={conference},
   bibtex_show={true},
-  abbr={MobiHoc}
+  abbr={MobiHoc},
+  topic_primary={Wireless}
 }
 
 @inproceedings{mano2023first,
@@ -512,7 +596,9 @@
   highlight={Highest Scoring and Best Paper},
   category={conference},
   bibtex_show={true},
-  abbr={ECOC}
+  abbr={ECOC},
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 @inproceedings{raj2023self,
@@ -522,7 +608,9 @@
   year={2023},
   category={conference},
   bibtex_show={true},
-  abbr={ECOC}
+  abbr={ECOC},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{raj2023machine,
@@ -532,7 +620,9 @@
   year={2023},
   category={conference},
   bibtex_show={true},
-  abbr={ECOC}
+  abbr={ECOC},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{wang2023transfer,
@@ -542,7 +632,9 @@
   year={2023},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @inproceedings{huang2023field,
@@ -553,7 +645,8 @@
   highlight={Top-Scored Paper},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics}
 }
 
 @inproceedings{raj2023digital,
@@ -563,7 +656,9 @@
   year={2023},
   category={workshop},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @article{chen2023programmable,
@@ -575,7 +670,9 @@
   year={2023},
   publisher={Elsevier},
   category={journal},
-  abbr={COMNET}
+  abbr={COMNET},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{wang2023open,
@@ -589,7 +686,9 @@
   publisher={Optica},
   category={journal},
   bibtex_show={true},
-  abbr={JOCN}
+  abbr={JOCN},
+  topic_primary={Optic},
+  topic_secondary={AI/ML}
 }
 
 @article{akinrintoyo2023reconfigurable,
@@ -602,7 +701,8 @@
   publisher={Elsevier},
   category={journal},
   bibtex_show={true},
-  abbr={OFT}
+  abbr={OFT},
+  topic_primary={Optics}
 }
 
 @inproceedings{qi2023programmable,
@@ -612,7 +712,9 @@
   year={2023},
   category={workshop},
   bibtex_show={true},
-  abbr={WiNTECH}
+  abbr={WiNTECH},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 # 2022
@@ -623,7 +725,9 @@
   year={2022},
   category={conference},
   bibtex_show={true},
-  abbr={ECOC}
+  abbr={ECOC},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
 }
 
 @article{chen2022software,
@@ -636,7 +740,9 @@
   publisher={IEEE},
   category={journal},
   bibtex_show={true},
-  abbr={IEEE Network}
+  abbr={IEEE Network},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 # 2021
@@ -647,7 +753,9 @@
   year={2021},
   category={workshop},
   bibtex_show={true},
-  abbr={WiNTECH}
+  abbr={WiNTECH},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{lantz2021sdn,
@@ -657,7 +765,8 @@
   year={2021},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics}
 }
 
 @inproceedings{gu2021development,
@@ -668,7 +777,9 @@
   highlight={Advanced Practice Paper Finalist},
   category={conference},
   bibtex_show={true},
-  abbr={IMS}
+  abbr={IMS},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{nagulu2021full,
@@ -678,7 +789,8 @@
   year={2021},
   category={conference},
   bibtex_show={true},
-  abbr={ISSCC}
+  abbr={ISSCC},
+  topic_primary={Wireless}
 }
 
 @article{kohli2021open,
@@ -691,7 +803,9 @@
   publisher={Elsevier},
   category={journal},
   bibtex_show={true},
-  abbr={COMNET}
+  abbr={COMNET},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{chen2021wideband,
@@ -702,7 +816,9 @@
   number={4},
   pages={1591--1604},
   year={2021},
-  publisher={IEEE/ACM}
+  publisher={IEEE/ACM},
+  abbr={TON},
+  topic_primary={Wireless}
 }
 
 @article{chen2021survey,
@@ -715,7 +831,8 @@
   publisher={IEEE},
   category={journal},
   bibtex_show={true},
-  abbr={OJ-COMS}
+  abbr={OJ-COMS},
+  topic_primary={Wireless}
 }
 
 @article{du2021directional,
@@ -726,7 +843,9 @@
   number={6},
   pages={3459--3469},
   year={2021},
-  publisher={IEEE}
+  publisher={IEEE},
+  abbr={TAP},
+  topic_primary={Wireless}
 }
 
 @article{nagulu2021a,
@@ -740,7 +859,8 @@
   publisher={IEEE},
   category={journal},
   bibtex_show={true},
-  abbr={JSSC}
+  abbr={JSSC},
+  topic_primary={Wireless}
 }
 
 % 2020
